# Supernote

./: .gitignore  CMakeLists.txt  README.md
doc/: new_docx.docx
include/: AppManager.h  Download.h  EditorListener.h  Export.h  FontMetricsProvider.h  NoteInfo.h  NoteView.h  RendererListener.h  VersionInfo.h  baserequest.h  baseresponse.h  check.h  download.h  export.h  getversion.h  httpclient.h  httppost.h  noteinfo.h  noteview.h  recognitionrequest.h  recognitionresponse.h  test.h  update.h  utils.h  ziphelper.h
layout/: ExportSetting.qml  ExportView.qml  FirstView.qml  FooterView.qml  HeaderView.qml  LangModel.qml  LanguageModel.qml  Main.qml  NoteMenuBar.qml  NoteWindow.qml  SecondView.qml  UpdateWindow.qml  main.qml
resource/: supernote.rc
src/: AppManager.cpp  Export.cpp  FontMetricsProvider.cpp  GetVersion.cpp  Main.cpp  NoteInfo.cpp  Update.cpp  VersionInfo.cpp  baserequest.cpp  baseresponse.cpp  check.cpp  download.cpp  export.cpp  getversion.cpp  main.cpp  noteinfo.cpp  noteview.cpp  update.cpp  utils.cpp  versioninfo.cpp  zip.c  ziphelper.cpp
translations/: en_US.ts  ja_JP.ts  zh_CN.ts  zh_TW.ts
